Fixed volume bar spacing

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -134,7 +134,7 @@ ul#playlist li .right {
     position:absolute;
     cursor:pointer;
     width: 200px;
-    top: 14px;
+    top: 12px;
     right: 50px;
     height:20px;
     background-color:rgba(0,0,0,.25);
